[package]
name = "text_tv_cli"
version = "0.1.0"
authors = ["Oscar Franzen <p.oscar.franzen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustls = "0.19.0"
webpki-roots = "0.21.0"
webpki = "0.21.4"
regex = "1"
getopts = "0.2.21"
home = "0.5.3"